--- a/style.css
+++ b/style.css
@@ -75,10 +75,10 @@ section {
   /* 들여쓰기 효과 */
   padding-left: 16px;
 }
-.sns-img {
+/* .sns-img {
   width: 12px;
   height: 12px;
-}
+} */
 .sns-wrap {
   text-align: right;
 }
